--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <!-- Private Investigator -->
           <div style="border: 1px solid #ccc; border-radius: 12px; padding: 1rem;">
             <h3>Private Investigator</h3>
-            <img src="images/ze_liu.jpg" alt="Ze Liu" style="width: 200px; border-radius: 8px; margin: 1rem 0;">
+            <img src="images/ze_liu.png" alt="Ze Liu" style="width: 200px; border-radius: 8px; margin: 1rem 0;">
             <p><strong>Ze Liu</strong><br>
               Researcher at Microsoft Research Asia (MSRA)<br>
               Focus: Visual Representation Learning, Hierarchical Modeling</p>
