--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div style="border: 1px solid #ccc; border-radius: 12px; padding: 1rem;">
             <h3>Reviewer</h3>
 
-            <p><strong>Review Score:</strong> <span style="font-weight: bold; font-size: 1.1rem;">7 — Accept</span></p>
+            <p><strong>Review Score:</strong> <span style="font-weight: bold; font-size: 1.1rem;">7/10 Accept</span></p>
             <p style="font-style: italic;">
               Swin Transformer, a unified backbone architecture that scales across vision tasks through hierarchical
               design
