--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <p>These diagrams illustrate the key ideas of the Swin Transformer:
             <ul>
-              <li><strong>Fig 1:</strong> Compares Swin Transformer’s hierarchical design with the flat architecture of
+              <li><strong>Fig 1:</strong> Compares Swin Transformer's hierarchical design with the flat architecture of
                 ViT.</li>
               <li><strong>Fig 2:</strong> Shows how attention is computed in shifted windows to increase local
                 connectivity.</li>
