--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <ul>
                 <li><strong>Image count:</strong> 51,839</li>
                 <li><strong>Classes:</strong> 43 different traffic signs</li>
-                <li><strong>Image size:</strong> Varies, mostly resized to 32×32 or 64×64 in preprocessing</li>
+                <li><strong>Image size:</strong> Varies, mostly resized to 32*32 or 64*64 in preprocessing</li>
                 <li><strong>Applications:</strong> Used in autonomous driving, traffic sign recognition, visual robustness testing</li>
               </ul>
             
@@ -181,7 +181,7 @@
                 <div style="display: flex; flex-wrap: wrap; gap: 1rem;">
                   <div style="flex: 1;">
                     <img src="images/Accuracy of CNN.png" alt="CNN Accuracy" style="width: 100%; border-radius: 8px;">
-                    <p style="font-size: 0.9rem;">Training and validation accuracy of ResNet-50 (CNN). It shows fast convergence and high validation accuracy approaching 99% after just a few epochs.</p>
+                    <p style="font-size: 0.9rem;">Training and validation accuracy of ResNet-50 (CNN). It shows fast convergence and high validation accuracy approaching 97% after just a few epochs.</p>
                   </div>
                   <div style="flex: 1;">
                     <img src="images/Accuracy of Swin-Transformer.png" alt="Swin Transformer Accuracy" style="width: 100%; border-radius: 8px;">
