--- a/index.html
+++ b/index.html
@@ -491,6 +491,25 @@
             <p>Overall, both models perform well, but Swin Transformer shows comparable or slightly better
               generalization ability. Its hierarchical architecture and shifted windows contribute to stable convergence
               with fewer parameters.</p>
+
+            <div style="margin-top: 2rem; padding: 1rem; background-color: #f9f9f9; border-left: 4px solid #007acc;">
+              <h3>Download Our Trained Model</h3>
+              <p>
+                We provide the best-performing Swin Transformer model trained on the GTSRB dataset.
+                If you'd like to run your own experiments or verify our results, you can download the model from the
+                link below:
+              </p>
+              <p>
+                🔗 <a href="https://drive.google.com/file/d/1pLvKtfuMXS5sMzP_bIoDb4DWmycnvv9_/view?usp=sharing"
+                  target="_blank" style="font-weight: bold; color: #007acc;">
+                  Download Model (.pth)
+                </a>
+              </p>
+              <p>
+                After downloading, you can place the `.pth` file in your project folder and load it using PyTorch for
+                inference or further training.
+              </p>
+            </div>
           </div>
 
         </section>
