--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+  <style>
+    p.math {
+      text-align: center;
+      font-family: "Courier New", monospace;
+      font-size: 1.05rem;
+    }
+  </style>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 
@@ -196,7 +203,7 @@
                 Thus, the embedded feature sequence has shape:
               </p>
 
-              <p style="margin-left: 1rem; font-family: 'Courier New', monospace;">
+              <p class="math">
                 \( \mathbf{X}_0 \in \mathbb{R}^{\frac{H}{4} \cdot \frac{W}{4} \times 48} \)
               </p>
 
@@ -205,7 +212,7 @@
                 a hidden dimension \( C \), where:
               </p>
 
-              <p style="margin-left: 1rem; font-family: 'Courier New', monospace;">
+              <p class="math">
                 \( \mathbf{X}_1 = \mathbf{X}_0 \cdot \mathbf{W}_{\text{embed}} \in \mathbb{R}^{\frac{H}{4} \cdot
                 \frac{W}{4} \times C} \)
               </p>
@@ -215,7 +222,7 @@
                 features from a 2×2 region and applies a linear projection:
               </p>
 
-              <p style="margin-left: 1rem; font-family: 'Courier New', monospace;">
+              <p class="math">
                 \( \text{PatchMerging}(x) = \text{Linear}(\text{Concat}(x_{i,j}, x_{i,j+1}, x_{i+1,j}, x_{i+1,j+1})) \)
               </p>
 
@@ -240,7 +247,7 @@
                 The W-MSA and SW-MSA operations can be formally described as:
               </p>
 
-              <p style="margin-left: 1rem; font-family: 'Courier New', monospace;">
+              <p class="math">
                 \( \text{Attention}(Q, K, V) = \text{Softmax}\left( \frac{QK^\top}{\sqrt{d}} \right)V \)
               </p>
 
