--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
               <p><strong>Figure 3:</strong> The overall architecture of the Swin transformer.</p>
               <p>The model adopts a hierarchical design with four stages in total. Except for the first stage, each
                 subsequent stage begins with a Patch Merging layer that downsamples the input feature map, reducing its
-                resolution. This allows the model to progressively enlarge the receptive field—similar to how CNNs
-                operate—enabling it to capture increasingly global information.</p>
+                resolution. This allows the model to progressively enlarge the receptive field-similar to how CNNs
+                operate-enabling it to capture increasingly global information.</p>
               <p>
                 At the beginning of the model, a <strong>Patch Partition</strong> operation is applied-this is
                 equivalent to the <strong>Patch Embedding</strong> in ViT. The input image is split into non-overlapping
