--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 subsequent stage begins with a
                 <strong>Patch Merging</strong> layer that downsamples the input feature map, reducing its resolution.
                 This allows the model to
-                progressively enlarge the receptive field—similar to how CNNs operate—enabling it to capture
+                progressively enlarge the receptive field - similar to how CNNs operate - enabling it to capture
                 increasingly global information.
               </p>
 
