--- a/index.html
+++ b/index.html
@@ -507,9 +507,9 @@
                 link below:
               </p>
               <p>
-                🔗 <a href="https://drive.google.com/file/d/1pLvKtfuMXS5sMzP_bIoDb4DWmycnvv9_/view?usp=sharing"
+                 <a href="https://drive.google.com/file/d/1pLvKtfuMXS5sMzP_bIoDb4DWmycnvv9_/view?usp=sharing"
                   target="_blank" style="font-weight: bold; color: #007acc;">
-                  Download Model (.pth)
+                  Download Weight file (.pth)
                 </a>
               </p>
               <p>
