--- a/index.html
+++ b/index.html
@@ -509,11 +509,11 @@
               <p>
                  <a href="https://drive.google.com/file/d/1pLvKtfuMXS5sMzP_bIoDb4DWmycnvv9_/view?usp=sharing"
                   target="_blank" style="font-weight: bold; color: #007acc;">
-                  Download Weight file (.pth)
+                  Download Swin - Tranformer Weight file (.pth) [with top 1 accuracy reaches 98.3 %]
                 </a>
               </p>
               <p>
-                After downloading, you can place the `.pth` file in your project folder and load it using PyTorch for
+                After downloading, you can place the `.pth` file in Swin - Transformer code part at project folder /Swin - Transformer - main / output and load it using PyTorch for
                 inference or further training.
               </p>
             </div>
