--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </p>
 
               <p>
-                At the beginning of the model, a <strong>Patch Partition</strong> operation is applied—this is
+                At the beginning of the model, a <strong>Patch Partition</strong> operation is applied - this is
                 equivalent to the <strong>Patch Embedding</strong> in ViT.
                 The input image of size \( H \times W \times 3 \) is divided into non-overlapping patches of size \( 4
                 \times 4 \), producing
@@ -394,7 +394,7 @@
                 dramatically improving efficiency without sacrificing accuracy.
               </li>
               <li>
-                Demonstrates <strong>state-of-the-art performance</strong> across diverse tasks—image classification,
+                Demonstrates <strong>state-of-the-art performance</strong> across diverse tasks - image classification,
                 object detection, and semantic segmentation.
               </li>
               <li>
